tests/samples/valid/constant_array.pn

const A: [2]i32 = [60, 140];

fn main() -> i32
{
	return: A[0] + A[1]
}
